--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,12 +64,13 @@ main div img.img-cards{
 }
 
 main div.info-team-card{
-    padding: 20px;
     position: relative;
     left: 15px;
+    top: 15px;
 }
 
 main div.info-team-card a{
     color: #4dccf2;
     text-decoration: none;
+    display:inline-block;
 }
