--- a/CSS/style.css
+++ b/CSS/style.css
@@ -61,6 +61,10 @@ main div.team-card{
     box-shadow: 3px 3px 10px 5px #888888;
 }
 
+main div.team-card:hover{
+    box-shadow: 3px 3px 10px 5px #E53170;
+}
+
 main div img.img-cards{
     width: 100px;
     height: 100px;
